--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
         this is header
         <h2>Bonus header</h2>
     </header>
-
-    <div class="blog">
-        this is 1 st blog
+    <div class="master">
+        day la quick-test branch
     </div>
 
-    <section class="content">
-        this is content
-    </section>
+    <div class="footer">this is footer</div>
 </body>
 </html>
