--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
         this is header
         <h2>Bonus header</h2>
     </header>
-    <div class="master">
-        day la quick-test branch
+    <div class="master-branch">
+        <h3>HEloo1</h3>
+        <h5>im master branch1</h5>
+        <br/>
+        <p>nice to meet u</p>
     </div>
 
-    <div class="footer">this is footer</div>
+    <div class="footer">
+        <p>im footer of master branch</p>
+    </div>
 </body>
 </html>
