add cool_content html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <p>nice to meet u</p>
     </div>
 
+    <div class="cool-feature">
+        Create cool feature
+    </div>
+
     <div class="footer">
         <p>im footer of master branch</p>
     </div>
